<resources>
    <string name="app_name">AzWay</string>
    <string name="registration">Регистрация</string>
    <string name="enter_your_phone_number">Введите ваш номер телефона</string>
    <string name="done">Готово</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Введите пароль</string>
    <string name="men">Мужской</string>
    <string name="women">Женский</string>
    <string name="pansionat">Пансионат</string>
    <string name="camping">База отдыха</string>
    <string name="hotel">Отель</string>
    <string name="flat">Квартира</string>
    <string name="house">Дом</string>
    <string name="owner">Собственник</string>
    <string name="realtor">Риэлтор</string>
</resources>