<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.addObject.chooseType.RoomTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="Добавление нового объекта"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Выберите тип объекта"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/DarkBlue"
                android:text="@string/house"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/DarkBlue"
                android:text="@string/flat"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/DarkBlue"
                android:text="@string/hotel"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/camping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/DarkBlue"
                android:text="@string/camping"
                android:textColor="@color/black"
                android:textSize="17dp" />


            <RadioButton
                android:id="@+id/pansionat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/DarkBlue"
                android:text="@string/pansionat"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/sign_in_button_white"
            android:gravity="center"
            android:text="Назад"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="4"
            android:background="@drawable/sigh_in_button"
            android:gravity="center"
            android:text="Продолжить"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>